2004-10-08  Dan Winship  <danw@novell.com>

	* reference/features/booking.xml: Document direct booking

	* reference/features/oof.xml: and out-of-office

	* reference/ximian-connector-docs.sgml: Add them

2004-10-06  Dan Winship  <danw@novell.com>

	* reference/ximian-connector-docs.sgml: add "Exchange
	Architectural Notes" section

	* reference/arch/bug-private.xml: 
	* reference/arch/bug-xml.xml: Document some Exchange bugs and how
	we cope with them.

	* ntlm: 
	* reference/arch/ntlm.xml: Docbookize.

	* reference/features/other-users.xml: Discussion of private items
	moved to bug-private.xml

	* README, Makefile.am: remove ntlm

2004-10-05  Dan Winship  <danw@novell.com>

	* reference/features/*: Namespace cross-references

2004-10-04  Dan Winship  <danw@novell.com>

	* reference/features/autoconfig.xml: Explain how autoconfig works
	and how it can be overridden. Partly from the old plaintext
	autoconfig doc.

	* reference/ximian-connector-docs.sgml: add autoconfig

2004-09-29  Dan Winship  <danw@novell.com>

	* delegates, security:
	* reference/features/delegation.xml:
	* reference/features/permissions.xml: Migrate two more files to
	docbook

	* Makefile.am, README
	* reference/ximian-connector-docs.sgml: Update

2004-09-28  Dan Winship  <danw@novell.com>

	* reference/ximian-connector-docs.sgml: Add "Implementation of
	Connector Features" chapter

	* reference/features/*.xml: Add notes on several connector
	features. (favorites, fba, free/busy, other users' folders, and
	mail folder threading). More to come.

	* reference/Makefile.am (dist-hook-local): dist them

	* favorites, freebusy, forms-based-auth: Gone. Migrated to docbook

	* README, Makefile.am: Update for removed files

2004-09-02  Dan Winship  <danw@novell.com>

	* reference/: lots of updating

2004-08-19  Dan Winship  <danw@novell.com>

	* service-packs: Document what version/build numbers of Exchange
	correspond to what service packs.

	* README: add service-packs
