@@ -10,8 +10,6 @@ forms			Very minimal notes on Outlook forms
 
 http			Notes on Connector/OWA's use of HTTP/WebDAV
 
-icalendar		Notes on X-MICROSOFT-CDO-* iCalendar properties
-
 ietf/			Relevant RFCs and (expired) Internet Drafts.
 			Exchange's implementation of the drafts may
 			not completely match the specifications.
