@@ -7,6 +7,15 @@
   </bookinfo>
 
   <chapter>
+    <title>Exchange Architectural Notes</title>
+    <xi:include href="arch/bug-private.xml"/>
+    <xi:include href="arch/bug-xml.xml"/>
+    <xi:include href="arch/calendar.xml"/>
+    <xi:include href="arch/mail.xml"/>
+    <xi:include href="arch/ntlm.xml"/>
+  </chapter>
+
+  <chapter>
     <title>Implementation of Connector Features</title>
     <xi:include href="features/autoconfig.xml"/>
     <xi:include href="features/booking.xml"/>
@@ -18,13 +27,6 @@
     <xi:include href="features/other-users.xml"/>
     <xi:include href="features/permissions.xml"/>
     <xi:include href="features/threading.xml"/>
-  </chapter>
-
-  <chapter>
-    <title>Exchange Architectural Notes</title>
-    <xi:include href="arch/bug-private.xml"/>
-    <xi:include href="arch/bug-xml.xml"/>
-    <xi:include href="arch/ntlm.xml"/>
   </chapter>
 
   <chapter>
