@@ -1,3 +1,13 @@
+2004-10-19  Dan Winship  <danw@novell.com>
+
+	* reference/arch/mail.xml: Mail architecture. part of docs/mail
+
+	* icalendar:
+	* reference/arch/calendar.xml: Calendar architecture, including
+	what used to be in docs/icalendar, plus more
+
+	* README, Makefile.am: Remove icalendar
+
 2004-10-08  Dan Winship  <danw@novell.com>
 
 	* reference/features/booking.xml: Document direct booking
